# Chip-8

./: CMakeLists.txt
include/: emulator.h  instructions.h  romload.h
src/: emulator.c  instructions.c  main.c  romload.c  tables.c  tables.h
